--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,9 +48,9 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.4'
-    implementation 'com.github.web3auth:single-factor-auth-java:0.0.3'
+    implementation 'com.github.Web3Auth:single-factor-auth-android:0.0.1'
     implementation 'org.torusresearch:fetch-node-details-java:3.1.0'
     implementation 'com.google.code.gson:gson:2.9.1'
 }
