--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: single_fact_auth_flutter
 description: A new Flutter plugin project.
 version: 0.0.1
-homepage:
+homepage: "https://github.com/web3auth/single-factor-auth-flutter"
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  sdk: ">=2.19.1 <3.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
