--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: single_factor_auth_flutter
-description: A new Flutter plugin project.
+description: Single Factor Auth Flutter SDK
 version: 0.0.1
 homepage: "https://github.com/web3auth/single-factor-auth-flutter"
 
