--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,8 +49,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    //implementation 'com.github.Web3Auth:single-factor-auth-android:0.4.0' //TODO(): Update version
-    implementation 'com.github.grvgoel81:single-factor-auth-android:7.0.0' // TODO(): remove this
+    implementation 'com.github.Web3Auth:single-factor-auth-android:1.0.0'
     implementation 'org.torusresearch:fetch-node-details-java:5.0.0'
     implementation 'com.google.code.gson:gson:2.9.1'
 }
